--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
   <main>
-      <script src="https://CDN.JSDelivr.net/p5.js/latest/mainfile"></script>
-        <script src="dice_decathlon.js"></script>
+      <script src=https://CDN.JSDelivr.net/p5.js/latest/mainfile></script>
+        <script src=dice_decathlon.js></script>
   </main>
 </body>
 
