Update for October 2023

--- a/html/rating_lists/index.html
+++ b/html/rating_lists/index.html
@@ -29,7 +29,7 @@
 
     </select>
 
-    <h2 id="tableTitle">Top 100 Classical for September 2023</h2>
+    <h2 id="tableTitle">Top 100 Classical for October 2023</h2>
 
     <div id="data"></div>
 
@@ -103,7 +103,7 @@
                 if(year === 2008) {
                     startMonth = 11;
                 } else if(year === 2023) {
-                    endMonth = 9; // Only up to September
+                    endMonth = 10; // Up to present
                 }
 
                 for(let i = startMonth; i <= endMonth; i++) {
