Automatically month detection

--- a/html/rating_lists/index.html
+++ b/html/rating_lists/index.html
@@ -33,7 +33,7 @@
 
     </select> -->
 
-    <h2 id="tableTitle">Top 100 Classical for December 2024</h2>
+    <h2 id="tableTitle"></h2>
 
     <div id="data"></div>
 
@@ -172,11 +172,21 @@
                 loadDataFromDropdowns();
             });
 
-            adjustYearsBasedOnTimeControl('Standard');
-            adjustMonthsBasedOnYear(2024);
-            document.getElementById('yearDropdown').value = 2024;
-            document.getElementById('monthDropdown').value = 12;
+            // Get current date info
+            const currentDate = new Date();
+            const currentYear = currentDate.getFullYear();
+            const currentMonth = currentDate.getMonth() + 1; // getMonth() is 0-based
 
+            // Initialize dropdowns with current date
+            adjustYearsBasedOnTimeControl('Standard');
+            adjustMonthsBasedOnYear(currentYear);
+            document.getElementById('yearDropdown').value = currentYear;
+            document.getElementById('monthDropdown').value = currentMonth;
+
+            // Initial load of data with current values
+            loadDataFromDropdowns();
+
+            // Add event listeners
             document.getElementById('groupDropdown').addEventListener('change', loadDataFromDropdowns);
             document.getElementById('monthDropdown').addEventListener('change', loadDataFromDropdowns);
 
